# SIU3R

./: .gitignore  README.md  inference.py  inference_multiview.py  pyproject.toml  viewer.py
configs/: hydra.yaml  main.yaml  main_multi.yaml
src/: config.py  evaluator.py  pipeline.py  pipeline_multi.py  run.py  run_multi.py  visualizer.py
src/data/: config.py  get_datamodule.py
src/data/components/: replica_dataset.py  scannet_dataset.py  scannetpp_dataset.py  scanrefer_dataset.py
src/data/datamodules/: concat_datamodule.py  replica_datamodule.py  scannet_datamodule.py  scannetpp_datamodule.py  scanrefer_datamodule.py
src/models/: backbone_croco.py  cuda_splatting.py  gaussian_adapter.py  gaussian_renderer.py  model.py  model_multi.py
src/models/croco/: croco.py
src/models/croco/curope/: curope2d.py
src/models/heads/: __init__.py  dpt_block.py  dpt_gs_head.py  dpt_head.py  multi_res_dpt_gs_head.py
src/models/mask2former/: __init__.py  image_processing_video_mask2former.py  utils.py  video_seg_decoder.py
src/models/vit_adapter/: __init__.py  blocks.py  vit_adapter.py
src/utils/: coco_constant.py  coco_panoptic.py  gaussians_types.py  miou.py  ply_export.py  scannet_constant.py  tensor_utils.py  visualize_utils.py  weight_modify.py
